[project]
name = "lesson-16"
version = "0.1.0"
description = ""
authors = [
    { name = "Goncharov Anton", email = "goncharrov.a@icloud.com" }
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "selene (>=2.0.0rc9,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylint (>=4.0.4,<5.0.0)"
]

[tool.poetry.dependencies]
selene = { allow-prereleases = true }
